<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.chiragtask.ui.login.LoginViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/_20sdp"
        android:paddingBottom="@dimen/_20sdp"
        tools:context=".ui.authentication.OnBoardingActivity">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"

            app:layout_constraintBottom_toTopOf="@+id/tvUserPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:text="@={viewModel.inputUserName}" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"

            android:hint="@string/password"
            app:layout_constraintBottom_toTopOf="@+id/btLogin"
            app:layout_constraintEnd_toEndOf="@+id/tvUserName"
            app:layout_constraintStart_toStartOf="@+id/tvUserName"
            app:layout_constraintTop_toBottomOf="@+id/tvUserName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"

                android:text="@={viewModel.inputPassword}" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btLogin"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:onClick="@{()->viewModel.checkLogin()}"
            android:padding="@dimen/_10sdp"
            android:text="@string/login"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvUserPassword"
            app:layout_constraintStart_toStartOf="@+id/tvUserPassword"
            app:layout_constraintTop_toBottomOf="@+id/tvUserPassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>